--- a/package.json
+++ b/package.json
@@ -10,19 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-native": "0.73.0",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.29.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-vector-icons": "^10.0.2",
+    "react-redux": "^9.0.4",
+    "redux-persist": "^6.0.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
